deploy/k8s/service-dev.yaml
kind: Service
apiVersion: v1
metadata:
  name: web-tarot-service
spec:
  type: LoadBalancer
  selector:
    app: web-tarot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
